// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Measurements loads measurements 1`] = `
Object {
  "allDays": Array [
    "2019-10-28",
    "2019-10-29",
    "2019-10-30",
    "2019-10-31",
    "2019-11-01",
    "2019-11-02",
    "2019-11-03",
    "2019-11-04",
    "2019-11-05",
  ],
  "allDaysWords": Array [
    "10/28",
    "10/29",
    "10/30",
    "10/31",
    "11/1",
    "11/2",
    "11/3",
    "11/4",
    "11/5",
  ],
  "avgDeploysPerDay": 1.25,
  "avgDeploysPerDayWords": "1.3",
  "avgLeadTimeSec": 11676.3,
  "avgLeadTimeWords": "3h",
  "days": 8,
  "deploysByDay": Object {
    "2019-10-28": 1,
    "2019-10-29": 0,
    "2019-10-30": 0,
    "2019-10-31": 0,
    "2019-11-01": 0,
    "2019-11-02": 0,
    "2019-11-03": 0,
    "2019-11-04": 0,
    "2019-11-05": 0,
  },
  "deploysByDayAndEnv": Object {
    "2019-10-28.pr1": 0,
    "2019-10-28.pr2": 0,
    "2019-10-28.pr3": 0,
    "2019-10-28.production": 1,
    "2019-10-28.staging": 0,
    "2019-10-29.pr1": 0,
    "2019-10-29.pr2": 0,
    "2019-10-29.pr3": 0,
    "2019-10-29.production": 0,
    "2019-10-29.staging": 0,
    "2019-10-30.pr1": 0,
    "2019-10-30.pr2": 0,
    "2019-10-30.pr3": 0,
    "2019-10-30.production": 0,
    "2019-10-30.staging": 0,
    "2019-10-31.pr1": 0,
    "2019-10-31.pr2": 0,
    "2019-10-31.pr3": 0,
    "2019-10-31.production": 0,
    "2019-10-31.staging": 0,
    "2019-11-01.pr1": 0,
    "2019-11-01.pr2": 0,
    "2019-11-01.pr3": 0,
    "2019-11-01.production": 0,
    "2019-11-01.staging": 0,
    "2019-11-02.pr1": 0,
    "2019-11-02.pr2": 0,
    "2019-11-02.pr3": 0,
    "2019-11-02.production": 0,
    "2019-11-02.staging": 0,
    "2019-11-03.pr1": 0,
    "2019-11-03.pr2": 0,
    "2019-11-03.pr3": 0,
    "2019-11-03.production": 0,
    "2019-11-03.staging": 0,
    "2019-11-04.pr1": 0,
    "2019-11-04.pr2": 0,
    "2019-11-04.pr3": 0,
    "2019-11-04.production": 0,
    "2019-11-04.staging": 0,
    "2019-11-05.pr1": 0,
    "2019-11-05.pr2": 0,
    "2019-11-05.pr3": 0,
    "2019-11-05.production": 0,
    "2019-11-05.staging": 0,
  },
  "deploysByEnv": Object {
    "pr1": 1,
    "pr2": 2,
    "pr3": 1,
    "production": 1,
    "staging": 5,
  },
  "end": 2019-11-04T00:00:00.460Z,
  "environments": Array [
    "pr1",
    "pr2",
    "pr3",
    "production",
    "staging",
  ],
  "measures": Array [
    Object {
      "committedAt": 2019-10-26T18:44:36.000Z,
      "createdAt": 2019-10-28T03:04:24.000Z,
      "deployedAt": 2019-10-28T03:04:51.000Z,
      "env": "production",
    },
    Object {
      "committedAt": 2019-10-26T18:10:50.000Z,
      "createdAt": 2019-10-26T18:10:58.000Z,
      "deployedAt": 2019-10-26T18:11:22.000Z,
      "env": "staging",
    },
    Object {
      "committedAt": 2019-10-26T14:37:17.000Z,
      "createdAt": 2019-10-26T14:37:23.000Z,
      "deployedAt": 2019-10-26T14:37:45.000Z,
      "env": "staging",
    },
    Object {
      "committedAt": 2019-10-26T14:35:50.000Z,
      "createdAt": 2019-10-26T14:36:17.000Z,
      "deployedAt": 2019-10-26T14:36:39.000Z,
      "env": "pr3",
    },
    Object {
      "committedAt": 2019-10-26T14:34:18.000Z,
      "createdAt": 2019-10-26T14:34:20.000Z,
      "deployedAt": 2019-10-26T14:34:42.000Z,
      "env": "pr2",
    },
    Object {
      "committedAt": 2019-10-26T14:28:22.000Z,
      "createdAt": 2019-10-26T14:28:29.000Z,
      "deployedAt": 2019-10-26T14:28:53.000Z,
      "env": "staging",
    },
    Object {
      "committedAt": 2019-10-26T14:26:37.000Z,
      "createdAt": 2019-10-26T14:27:26.000Z,
      "deployedAt": 2019-10-26T14:27:48.000Z,
      "env": "pr2",
    },
    Object {
      "committedAt": 2019-10-26T14:13:18.000Z,
      "createdAt": 2019-10-26T14:13:24.000Z,
      "deployedAt": 2019-10-26T14:13:48.000Z,
      "env": "staging",
    },
    Object {
      "committedAt": 2019-10-26T14:11:51.000Z,
      "createdAt": 2019-10-26T14:12:17.000Z,
      "deployedAt": 2019-10-26T14:12:40.000Z,
      "env": "pr1",
    },
    Object {
      "committedAt": 2019-10-26T14:10:17.000Z,
      "createdAt": 2019-10-26T14:10:25.000Z,
      "deployedAt": 2019-10-26T14:10:51.000Z,
      "env": "staging",
    },
  ],
  "range": Array [
    "2019-10-28",
    "2019-11-04",
  ],
  "start": 2019-10-28T00:00:00.460Z,
  "totalDeploys": 10,
  "totalLeadTimeSec": 116763,
}
`;

exports[`Measurements loads measurements from query 1`] = `
Object {
  "allDays": Array [
    "2019-10-28",
    "2019-10-29",
    "2019-10-30",
    "2019-10-31",
    "2019-11-01",
    "2019-11-02",
    "2019-11-03",
    "2019-11-04",
    "2019-11-05",
  ],
  "allDaysWords": Array [
    "10/28",
    "10/29",
    "10/30",
    "10/31",
    "11/1",
    "11/2",
    "11/3",
    "11/4",
    "11/5",
  ],
  "avgDeploysPerDay": 0.75,
  "avgDeploysPerDayWords": "0.8",
  "avgLeadTimeSec": 479.6666666666667,
  "avgLeadTimeWords": "7m",
  "days": 8,
  "deploysByDay": Object {
    "2019-10-28": 2,
    "2019-10-29": 1,
    "2019-10-30": 0,
    "2019-10-31": 2,
    "2019-11-01": 0,
    "2019-11-02": 1,
    "2019-11-03": 0,
    "2019-11-04": 0,
    "2019-11-05": 0,
  },
  "deploysByDayAndEnv": Object {
    "2019-10-28.production": 2,
    "2019-10-29.production": 1,
    "2019-10-30.production": 0,
    "2019-10-31.production": 2,
    "2019-11-01.production": 0,
    "2019-11-02.production": 1,
    "2019-11-03.production": 0,
    "2019-11-04.production": 0,
    "2019-11-05.production": 0,
  },
  "deploysByEnv": Object {
    "production": 6,
  },
  "end": 2019-11-04T00:00:00.460Z,
  "environments": Array [
    "production",
  ],
  "measures": Array [
    Object {
      "committedAt": 2019-10-28T02:36:55.000Z,
      "createdAt": 2019-10-28T02:39:21.000Z,
      "deployedAt": 2019-10-28T02:42:00.000Z,
      "env": "production",
      "startedAt": 2019-10-28T02:36:55.000Z,
      "state": "ACTIVE",
    },
    Object {
      "committedAt": 2019-10-28T06:12:36.000Z,
      "createdAt": 2019-10-28T06:18:27.000Z,
      "deployedAt": 2019-10-28T06:21:29.000Z,
      "env": "production",
      "startedAt": 2019-10-28T06:12:36.000Z,
      "state": "ACTIVE",
    },
    Object {
      "committedAt": 2019-10-29T03:08:39.000Z,
      "createdAt": 2019-10-29T03:30:33.000Z,
      "deployedAt": 2019-10-29T03:33:45.000Z,
      "env": "production",
      "startedAt": 2019-10-29T03:08:39.000Z,
      "state": "ACTIVE",
    },
    Object {
      "committedAt": 2019-10-31T00:28:57.000Z,
      "createdAt": 2019-10-31T00:35:19.000Z,
      "deployedAt": null,
      "env": "production",
      "startedAt": 2019-10-31T00:28:57.000Z,
      "state": "ABANDONED",
    },
    Object {
      "committedAt": 2019-10-31T00:57:09.000Z,
      "createdAt": 2019-10-31T00:57:28.000Z,
      "deployedAt": 2019-10-31T01:00:09.000Z,
      "env": "production",
      "startedAt": 2019-10-31T00:57:09.000Z,
      "state": "ACTIVE",
    },
    Object {
      "committedAt": 2019-11-02T17:37:25.000Z,
      "createdAt": 2019-11-02T17:40:26.000Z,
      "deployedAt": 2019-11-02T17:43:19.000Z,
      "env": "production",
      "startedAt": 2019-11-02T17:37:25.000Z,
      "state": "ACTIVE",
    },
  ],
  "range": Array [
    "2019-10-28",
    "2019-11-04",
  ],
  "start": 2019-10-28T00:00:00.460Z,
  "totalDeploys": 6,
  "totalLeadTimeSec": 2878,
}
`;

exports[`Measurements loads query 1`] = `
Array [
  Object {
    "committedAt": 2019-10-28T02:36:55.000Z,
    "createdAt": 2019-10-28T02:39:21.000Z,
    "deployedAt": 2019-10-28T02:42:00.000Z,
    "env": "production",
    "startedAt": 2019-10-28T02:36:55.000Z,
    "state": "ACTIVE",
  },
  Object {
    "committedAt": 2019-10-28T06:12:36.000Z,
    "createdAt": 2019-10-28T06:18:27.000Z,
    "deployedAt": 2019-10-28T06:21:29.000Z,
    "env": "production",
    "startedAt": 2019-10-28T06:12:36.000Z,
    "state": "ACTIVE",
  },
  Object {
    "committedAt": 2019-10-29T03:08:39.000Z,
    "createdAt": 2019-10-29T03:30:33.000Z,
    "deployedAt": 2019-10-29T03:33:45.000Z,
    "env": "production",
    "startedAt": 2019-10-29T03:08:39.000Z,
    "state": "ACTIVE",
  },
  Object {
    "committedAt": 2019-10-31T00:28:57.000Z,
    "createdAt": 2019-10-31T00:35:19.000Z,
    "deployedAt": null,
    "env": "production",
    "startedAt": 2019-10-31T00:28:57.000Z,
    "state": "ABANDONED",
  },
  Object {
    "committedAt": 2019-10-31T00:57:09.000Z,
    "createdAt": 2019-10-31T00:57:28.000Z,
    "deployedAt": 2019-10-31T01:00:09.000Z,
    "env": "production",
    "startedAt": 2019-10-31T00:57:09.000Z,
    "state": "ACTIVE",
  },
  Object {
    "committedAt": 2019-11-02T17:37:25.000Z,
    "createdAt": 2019-11-02T17:40:26.000Z,
    "deployedAt": 2019-11-02T17:43:19.000Z,
    "env": "production",
    "startedAt": 2019-11-02T17:37:25.000Z,
    "state": "ACTIVE",
  },
]
`;
